Fixed some spacing issues

--- a/src/app/post/[id]/post.css
+++ b/src/app/post/[id]/post.css
@@ -3,7 +3,6 @@
   overflow-y: scroll;
   padding: 10px 10px;
   overflow-x: hidden;
-  padding-bottom: 40px;
 }
 .post:has(.loaderdiv) {
   display: flex;
@@ -116,4 +115,7 @@
   display: flex;
   gap: 10px;
   align-items: center;
+}
+.post {
+  padding-bottom: 30px !important;
 }
