--- a/src/app/profile/profile.css
+++ b/src/app/profile/profile.css
@@ -2,7 +2,6 @@
   overflow-y: scroll;
   max-height: calc(100dvh - 70px);
   overflow-x: hidden;
-  padding-bottom: 30px;
 }
 
 .mainTop {
